# libtorch-playground

./: .gitignore  CMakeLists.txt  bridge.h  cleanout.sh  hello.chpl  mylib.h
cmake/: LibTorchDL.cmake
include/: bridge.h  mylib.h  mylib2.h
lib/: _mylib.txt  bridge.cpp  myWrapper  mylib.c  mylib2.cpp
src/: Milk.chpl  MyLibTest.chpl  MyLibTestXX.chpl  TorchBridge.chpl  bridge.cpp  bridge.h  hello.chpl  main.cpp  myWrapper.chpl  wrapper.chpl
